[package]
name = "extract_links"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = "0.12.5"
tokio = { version = "1.21.1", features = ["full"] }
select = "0.6.0" #this is goiig to allow us to be able to select the href attribute from the html
